--- a/Web_FIA44_User_verwaltung_Admin_Control/Web_FIA44_User_verwaltung_Admin_Control.csproj
+++ b/Web_FIA44_User_verwaltung_Admin_Control/Web_FIA44_User_verwaltung_Admin_Control.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\Images\UserImages\" />
+    <Folder Include="wwwroot\Images\standard_user_image\" />
     <Folder Include="wwwroot\Libary\" />
   </ItemGroup>
 
